--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ debug:disable_logs = false
 source = ./colors.conf
 # GLOBAL VARIABLES
 
-$wallpaper="/home/yukna/Dotfiles/.config/wallust/cyberdream.json"
+$wallpaper="~/Documents/Projects/wallpaper_quantiser/wallpaper_base16.png"
 $menu_paste = ~/.config/scripts/paste_menu.sh
 $term = ghostty
 $filebrowser = nautilus
@@ -41,7 +41,7 @@ monitor =, preferred,auto,auto
 exec-once = dunst
 exec-once = ~/.config/scripts/hyprland-plugin-script_2.sh
 exec-once = hypridle
-exec-once = swaybg -i Pictures/Wallpaper/wallhaven-5g8r55.jpg  
+exec-once = swaybg -i $wallpaper -m fill
 exec-once = waybar
 exec-once = iio-hyprland
 exec-once = lxqt-policykit-agent
