--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -137,20 +137,9 @@ general {
     border_size = 1
     col.active_border = rgba($color06DD)
     col.inactive_border = rgba($color02DD)
-    layout = dwindle
+    #layout = dwindle
+    layout = scrolling
     resize_on_border = true
-}
-
-
-plugin:overview {
-    panelColor = rgba($background55)
-    hideTopLayers = true
-    affectStrut = false
-    showEmptyWorkspace = false
-    autoDrag = false
-    switchOnDrop = true
-    exitOnSwitch = true
-    workspaceActiveBorder = rgba($color01FF)
 }
 
 windowrule = bordercolor rgba($color0ADD),fullscreen:1
@@ -392,69 +381,92 @@ gestures {
     workspace_swipe_cancel_ratio = 0.1
 }
 
-plugin.touch_gestures {
-    sensitivity = 5.0
-    long_press_delay = 1000
-    # must be >= 3
-    workspace_swipe_fingers = 4
-    experimental {
-        send_cancel = 0
+plugin {
+    touch_gestures {
+        sensitivity = 5.0
+        long_press_delay = 1000
+        workspace_swipe_fingers = 4 # must be >= 3
+        experimental {
+            send_cancel = 0
+        }
     }
+
+    hyprscrolling {
+        column_width = 0.5
+        explicit_column_widths = 0.5, 1.0
+        focus_fit_method = 1
+        center_on_focus = false
+    }
+
+    hyprtrails {
+        color = rgba($color08DD)
+    }
+
+    # overview {
+    #     panelColor = rgba($background55)
+    #     hideTopLayers = true
+    #     affectStrut = false
+    #     showEmptyWorkspace = false
+    #     autoDrag = false
+    #     switchOnDrop = true
+    #     exitOnSwitch = true
+    #     workspaceActiveBorder = rgba($color01FF)
+    # }
+
+    # hyprexpo {
+    #     columns = 3
+    #     gap_size = 10
+    #     bg_col = rgb(111111)
+    #     workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+    # 
+    #     enable_gesture = true # laptop touchpad
+    #     gesture_fingers = 3  # 3 or 4
+    #     gesture_distance = 300 # how far is the "max"
+    #     gesture_positive = false # positive = swipe down. Negative = swipe up.
+    # }
+
+
+    # animations {
+    #     enabled = false
+    #     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    #     animation = windows,        1, 7,   myBezier
+    #     animation = windowsOut,     1, 5,   default, popin 80%
+    #     animation = border,         1, 10,  myBezier
+    #     animation = borderangle,    1, 8,   default
+    #     animation = fade,           1, 7,   default
+    #     animation = workspaces,     1, 6,   default
+    # }
+
+    # hyprfocus {
+    #     enabled = yes
+    #     animate_floating = yes
+    #     animate_workspacechange = yes
+    #     focus_animation = shrink
+    # 
+    #     # Beziers for focus animations
+    #     bezier = bezIn, 0.5,0.0,1.0,0.5
+    #     bezier = bezOut, 0.0,0.5,0.5,1.0
+    #     bezier = overshot, 0.05, 0.9, 0.1, 1.05
+    #     bezier = smoothOut, 0.36, 0, 0.66, -0.56
+    #     bezier = smoothIn, 0.25, 1, 0.5, 1
+    #     bezier = realsmooth, 0.28,0.29,.69,1.08
+    #     
+    #     # Flash settings
+    #     flash {
+    #         flash_opacity = 0.95
+    #         in_bezier = realsmooth
+    #         in_speed = 0.5
+    #         out_bezier = realsmooth
+    #         out_speed = 3
+    #     }
+    # 
+    #     # Shrink settings
+    #     shrink {
+    #         shrink_percentage = 0.95
+    #         in_bezier = realsmooth
+    #         in_speed = 1
+    #         out_bezier = realsmooth
+    #         out_speed = 2
+    #     }
+    # }
 }
-
-plugin.hyprexpo {
-    columns = 3
-    gap_size = 10
-    bg_col = rgb(111111)
-    workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
-
-    enable_gesture = true # laptop touchpad
-    gesture_fingers = 3  # 3 or 4
-    gesture_distance = 300 # how far is the "max"
-    gesture_positive = false # positive = swipe down. Negative = swipe up.
-}
-
-
-# animations {
-#     enabled = false
-#     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-#     animation = windows,        1, 7,   myBezier
-#     animation = windowsOut,     1, 5,   default, popin 80%
-#     animation = border,         1, 10,  myBezier
-#     animation = borderangle,    1, 8,   default
-#     animation = fade,           1, 7,   default
-#     animation = workspaces,     1, 6,   default
-# }
-
-# hyprfocus {
-#     enabled = yes
-#     animate_floating = yes
-#     animate_workspacechange = yes
-#     focus_animation = shrink
-# 
-#     # Beziers for focus animations
-#     bezier = bezIn, 0.5,0.0,1.0,0.5
-#     bezier = bezOut, 0.0,0.5,0.5,1.0
-#     bezier = overshot, 0.05, 0.9, 0.1, 1.05
-#     bezier = smoothOut, 0.36, 0, 0.66, -0.56
-#     bezier = smoothIn, 0.25, 1, 0.5, 1
-#     bezier = realsmooth, 0.28,0.29,.69,1.08
-#     
-#     # Flash settings
-#     flash {
-#         flash_opacity = 0.95
-#         in_bezier = realsmooth
-#         in_speed = 0.5
-#         out_bezier = realsmooth
-#         out_speed = 3
-#     }
-# 
-#     # Shrink settings
-#     shrink {
-#         shrink_percentage = 0.95
-#         in_bezier = realsmooth
-#         in_speed = 1
-#         out_bezier = realsmooth
-#         out_speed = 2
-#     }
-# }
