--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -137,8 +137,8 @@ general {
     border_size = 1
     col.active_border = rgba($color06DD)
     col.inactive_border = rgba($color02DD)
-    #layout = dwindle
-    layout = scrolling
+    layout = dwindle
+    # layout = scrolling
     resize_on_border = true
 }
 
