--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ debug:disable_logs = false
 source = ./colors.conf
 # GLOBAL VARIABLES
 
-$wallpaper="/home/yukna/Dotfiles/.config/wallust/cyberdream.json"
+$wallpaper="/home/yukna/Documents/Projects/wallpaper_quantiser/wallpaper_base16.png"
 $menu_paste = ~/.config/scripts/paste_menu.sh
 $term = ghostty
 $filebrowser = nautilus
@@ -41,7 +41,7 @@ monitor =, preferred,auto,auto
 exec-once = dunst
 exec-once = ~/.config/scripts/hyprland-plugin-script_2.sh
 exec-once = hypridle
-exec-once = swaybg -i Pictures/Wallpaper/wallhaven-5g8r55.jpg  
+exec-once = swaybg -i $wallpaper
 exec-once = waybar
 exec-once = iio-hyprland
 exec-once = lxqt-policykit-agent
@@ -89,7 +89,6 @@ exec-once = hyprctl dismissnotify
 
 input {
     kb_layout = us
-
     follow_mouse = 1
 
     touchpad {
@@ -391,12 +390,12 @@ plugin {
         }
     }
 
-    hyprscrolling {
-        column_width = 0.5
-        explicit_column_widths = 0.5, 1.0
-        focus_fit_method = 1
-        center_on_focus = false
-    }
+    # hyprscrolling {
+    #     column_width = 0.5
+    #     explicit_column_widths = 0.5, 1.0
+    #     focus_fit_method = 1
+    #     center_on_focus = false
+    # }
 
     hyprtrails {
         color = rgba($color08DD)
