Fix waybar and hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -239,6 +239,7 @@ bind=SHIFT,Print, exec, $printscr_ss
 bind=SUPER, Print, exec, $printscr_f
 bind=,Print, exec, $printscr_sf
 
+
 # MODES
 
 submap = kill 
@@ -390,16 +391,9 @@ plugin {
         }
     }
 
-    # hyprscrolling {
-    #     column_width = 0.5
-    #     explicit_column_widths = 0.5, 1.0
-    #     focus_fit_method = 1
-    #     center_on_focus = false
+    # hyprtrails {
+    #     color = rgba($color08DD)
     # }
-
-    hyprtrails {
-        color = rgba($color08DD)
-    }
 
     # overview {
     #     panelColor = rgba($background55)
