Fix hyprland code

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ debug:disable_logs = false
 source = ./colors.conf
 # GLOBAL VARIABLES
 
-$wallpaper="~/Documents/Projects/wallpaper_quantiser/wallpaper_base16.png"
+$wallpaper="/home/yukna/Documents/Projects/wallpaper_quantiser/wallpaper_base16.png"
 $menu_paste = ~/.config/scripts/paste_menu.sh
 $term = ghostty
 $filebrowser = nautilus
@@ -41,7 +41,7 @@ monitor =, preferred,auto,auto
 exec-once = dunst
 exec-once = ~/.config/scripts/hyprland-plugin-script_2.sh
 exec-once = hypridle
-exec-once = swaybg -i $wallpaper -m fill
+exec-once = swaybg -i $wallpaper
 exec-once = waybar
 exec-once = iio-hyprland
 exec-once = lxqt-policykit-agent
@@ -89,7 +89,11 @@ exec-once = hyprctl dismissnotify
 
 input {
     kb_layout = us
+    follow_mouse = 1
 
+    touchpad {
+        natural_scroll = true
+        disable_while_typing = true
         middle_button_emulation = true
     }
 
@@ -133,19 +137,8 @@ general {
     col.active_border = rgba($color06DD)
     col.inactive_border = rgba($color02DD)
     layout = dwindle
+    # layout = scrolling
     resize_on_border = true
-}
-
-
-plugin:overview {
-    panelColor = rgba($background55)
-    hideTopLayers = true
-    affectStrut = false
-    showEmptyWorkspace = false
-    autoDrag = false
-    switchOnDrop = true
-    exitOnSwitch = true
-    workspaceActiveBorder = rgba($color01FF)
 }
 
 windowrule = bordercolor rgba($color0ADD),fullscreen:1
@@ -245,6 +238,7 @@ bind=CONTROL,Print, exec, $printscr_sw
 bind=SHIFT,Print, exec, $printscr_ss
 bind=SUPER, Print, exec, $printscr_f
 bind=,Print, exec, $printscr_sf
+
 
 # MODES
 
@@ -387,69 +381,85 @@ gestures {
     workspace_swipe_cancel_ratio = 0.1
 }
 
-plugin.touch_gestures {
-    sensitivity = 5.0
-    long_press_delay = 1000
-    # must be >= 3
-    workspace_swipe_fingers = 4
-    experimental {
-        send_cancel = 0
+plugin {
+    touch_gestures {
+        sensitivity = 5.0
+        long_press_delay = 1000
+        workspace_swipe_fingers = 4 # must be >= 3
+        experimental {
+            send_cancel = 0
+        }
     }
+
+    # hyprtrails {
+    #     color = rgba($color08DD)
+    # }
+
+    # overview {
+    #     panelColor = rgba($background55)
+    #     hideTopLayers = true
+    #     affectStrut = false
+    #     showEmptyWorkspace = false
+    #     autoDrag = false
+    #     switchOnDrop = true
+    #     exitOnSwitch = true
+    #     workspaceActiveBorder = rgba($color01FF)
+    # }
+
+    # hyprexpo {
+    #     columns = 3
+    #     gap_size = 10
+    #     bg_col = rgb(111111)
+    #     workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+    # 
+    #     enable_gesture = true # laptop touchpad
+    #     gesture_fingers = 3  # 3 or 4
+    #     gesture_distance = 300 # how far is the "max"
+    #     gesture_positive = false # positive = swipe down. Negative = swipe up.
+    # }
+
+
+    # animations {
+    #     enabled = false
+    #     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    #     animation = windows,        1, 7,   myBezier
+    #     animation = windowsOut,     1, 5,   default, popin 80%
+    #     animation = border,         1, 10,  myBezier
+    #     animation = borderangle,    1, 8,   default
+    #     animation = fade,           1, 7,   default
+    #     animation = workspaces,     1, 6,   default
+    # }
+
+    # hyprfocus {
+    #     enabled = yes
+    #     animate_floating = yes
+    #     animate_workspacechange = yes
+    #     focus_animation = shrink
+    # 
+    #     # Beziers for focus animations
+    #     bezier = bezIn, 0.5,0.0,1.0,0.5
+    #     bezier = bezOut, 0.0,0.5,0.5,1.0
+    #     bezier = overshot, 0.05, 0.9, 0.1, 1.05
+    #     bezier = smoothOut, 0.36, 0, 0.66, -0.56
+    #     bezier = smoothIn, 0.25, 1, 0.5, 1
+    #     bezier = realsmooth, 0.28,0.29,.69,1.08
+    #     
+    #     # Flash settings
+    #     flash {
+    #         flash_opacity = 0.95
+    #         in_bezier = realsmooth
+    #         in_speed = 0.5
+    #         out_bezier = realsmooth
+    #         out_speed = 3
+    #     }
+    # 
+    #     # Shrink settings
+    #     shrink {
+    #         shrink_percentage = 0.95
+    #         in_bezier = realsmooth
+    #         in_speed = 1
+    #         out_bezier = realsmooth
+    #         out_speed = 2
+    #     }
+    # }
 }
-
-plugin.hyprexpo {
-    columns = 3
-    gap_size = 10
-    bg_col = rgb(111111)
-    workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
-
-    enable_gesture = true # laptop touchpad
-    gesture_fingers = 3  # 3 or 4
-    gesture_distance = 300 # how far is the "max"
-    gesture_positive = false # positive = swipe down. Negative = swipe up.
-}
-
-
-# animations {
-#     enabled = false
-#     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-#     animation = windows,        1, 7,   myBezier
-#     animation = windowsOut,     1, 5,   default, popin 80%
-#     animation = border,         1, 10,  myBezier
-#     animation = borderangle,    1, 8,   default
-#     animation = fade,           1, 7,   default
-#     animation = workspaces,     1, 6,   default
-# }
-
-# hyprfocus {
-#     enabled = yes
-#     animate_floating = yes
-#     animate_workspacechange = yes
-#     focus_animation = shrink
-# 
-#     # Beziers for focus animations
-#     bezier = bezIn, 0.5,0.0,1.0,0.5
-#     bezier = bezOut, 0.0,0.5,0.5,1.0
-#     bezier = overshot, 0.05, 0.9, 0.1, 1.05
-#     bezier = smoothOut, 0.36, 0, 0.66, -0.56
-#     bezier = smoothIn, 0.25, 1, 0.5, 1
-#     bezier = realsmooth, 0.28,0.29,.69,1.08
-#     
-#     # Flash settings
-#     flash {
-#         flash_opacity = 0.95
-#         in_bezier = realsmooth
-#         in_speed = 0.5
-#         out_bezier = realsmooth
-#         out_speed = 3
-#     }
-# 
-#     # Shrink settings
-#     shrink {
-#         shrink_percentage = 0.95
-#         in_bezier = realsmooth
-#         in_speed = 1
-#         out_bezier = realsmooth
-#         out_speed = 2
-#     }
-# }
