--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -147,11 +147,10 @@
         //position
         "modules-left": [
             "custom/launch_app",
-            "hyprland/workspaces",
-            "hyprland/submap"
+            "niri/workspaces",
         ],
         "modules-center":[
-            "hyprland/window"
+            "niri/window"
         ],
         "modules-right": [
             "custom/kill",
@@ -167,43 +166,38 @@
             "on-click": "$HOME/.config/scripts/icon_launcher.sh", // Removed sleep
             "escape": true
         },
-        "hyprland/workspaces": {
-            "show-special": true,
-            "format": "{name} [{windows}]", // Base format
-            "sort-by": "id",
-             "format-icons":{ // Icons are content
-                 "special": "",
-                 "active": ":",
-                 "default": ":"
-             },
-            "format-window-separator": " ",
-            "window-rewrite-default": "",
-            "window-rewrite": { // Icons are content
-                "^[ ]*$": "",
-                "foot": "",
-                "ghostty": "",
-                "thunar": "",
-                "nautilus": "",
-                "brave-calendar.google.com__calendar_u_1_r-Default":"",
-                "brave-mail.google.com__mail_u_.-Default": "",
-                "brave-web.whatsapp.com__-Default": "",
-                "brave-to-do.live.com__tasks_today-Default": "",
-                "brave-ticktick.com__webapp_-Default": "",
-                "brave-browser": "󰖟",
-                "org.telegram.desktop": "",
-                "brave-open.spotify.com__-Default": "",
-                "spt": "",
-                "^[ ]*$Spotify Premium$": "", // Adjusted regex slightly
-                "Spotify": ""
+        "niri/workspaces": {
+            "format": "{value} {icon}", // Base format
+            "format-icons":{ // Icons are content
+                "active": "",
+                "default": ""
             },
-            "on-scroll-up": "hyprctl dispatch workspace e+1",
-            "on-scroll-down": "hyprctl dispatch workspace e-1"
-            // CSS classes used: #workspaces button, .active, .special, .urgent, :hover
+                // "^[ ]*$": "",
+                // "foot": "",
+                // "ghostty": "",
+                // "thunar": "",
+                // "nautilus": "",
+                // "brave-calendar.google.com__calendar_u_1_r-Default":"",
+                // "brave-mail.google.com__mail_u_.-Default": "",
+                // "brave-web.whatsapp.com__-Default": "",
+                // "brave-to-do.live.com__tasks_today-Default": "",
+                // "brave-ticktick.com__webapp_-Default": "",
+                // "brave-browser": "󰖟",
+                // "org.telegram.desktop": "",
+                // "brave-open.spotify.com__-Default": "",
+                // "spt": "",
+                // "^[ ]*$Spotify Premium$": "", // Adjusted regex slightly
+                // "Spotify": "",
+            // CSS classes used: 
+                // #workspaces button
+                // #workspaces button.focused: The single focused workspace.
+                // #workspaces button.active: The workspace is active (visible) on its output.
+                // #workspaces button.urgent: The workspace has one or more urgent windows.
+                // #workspaces button.empty: The workspace is empty.
+                // #workspaces button.current_output: The workspace is from the same output as the bar that it is displayed on.
+                // #workspaces button#niri-workspace-<name>: Workspaces named this, or index for unnamed workspaces.
         },
-        "hyprland/submap": {
-            "format": "{}" // Style (italic) handled by CSS #hyprland-submap
-        },
-        "hyprland/window": {
+        "niri/window": {
             "max-length": 100,
             "separate-outputs": true,
             "format": "{}",
@@ -213,12 +207,12 @@
                   "^nvim (.*)": "<span></span> $1",
                   "(.*) - Brave$": "<span>󰖟</span> $1"
             }
-            // CSS classes used: #window (or #hyprland-window?), .icon
+            // CSS classes used: #window (or #niri-window?), .icon
         },
         "custom/kill": {
             "tooltip": false,
             "format": "󰅗", // Size handled by CSS #custom-kill
-            "on-click": "hyprland dispatch killactive", // Removed sleep
+            "on-click": "niri dispatch killactive", // Removed sleep
             "escape": true
         },
         "tray": {
